--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.9.1",
     "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "@hapi/joi": "^17.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -33,11 +35,14 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "joi-browser": "^13.4.0",
     "markdown-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.13.1",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
     "react-hot-loader": "^4.12.20",
@@ -45,9 +50,11 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-universal-component": "^4.0.1",
+    "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
+    "serialize-javascript": "^3.0.0",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^4.0.0",
