--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-static-gzip": "^2.0.6",
     "extract-css-chunks-webpack-plugin": "^4.7.4",
     "file-loader": "^6.0.0",
+    "firebase": "^7.13.2",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "joi-browser": "^13.4.0",
@@ -40,6 +41,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.13.1",
     "react-dates": "^21.8.0",
