--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    }
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon  --watch src/server --watch config src/server/main.js",
     "prod": "cross-env NODE_ENV=production node src/server/main.js",
+    "test": "jest --watch",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
@@ -36,6 +43,8 @@
     "firebase": "^7.13.2",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.2.7",
     "joi-browser": "^13.4.0",
     "markdown-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -51,6 +60,7 @@
     "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.13.1",
     "react-universal-component": "^4.0.1",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
