--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon  --watch src/server --watch config src/server/main.js",
     "prod": "cross-env NODE_ENV=production node src/server/main.js",
-    "test": "jest --config=jest.config.json --watchAll",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watchAll",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
@@ -76,9 +76,11 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "raf": "^3.4.1"
+    "raf": "^3.4.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
